# aoc2025

./: CHANGELOG.md  LICENSE  README.md  Rakefile.rb  aoc2025.cabal
app/: Main.hs
src/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Parsers.hs  Utils.hs
test/: Spec.hs  Spec_Day02.hs
